Debug prints and another attempt to fix QTBUG-8687 for N8.