src/network/kernel/qhostinfo_unix.cpp
@@ -208,12 +208,19 @@ QHostInfo QHostInfoAgent::fromName(const QString &hostName)
 #ifdef Q_ADDRCONFIG
     hints.ai_flags = Q_ADDRCONFIG;
 #endif
+#ifdef Q_OS_SYMBIAN
+    qDebug() << "Setting flags: 'hints.ai_flags &= AI_V4MAPPED | AI_ALL'";
+#endif
 
     int result = getaddrinfo(aceHostname.constData(), 0, &hints, &res);
 # ifdef Q_ADDRCONFIG
     if (result == EAI_BADFLAGS) {
         // if the lookup failed with AI_ADDRCONFIG set, try again without it
         hints.ai_flags = 0;
+#ifdef Q_OS_SYMBIAN
+        qDebug() << "Setting flags: 'hints.ai_flags &= AI_V4MAPPED | AI_ALL'";
+        hints.ai_flags &= AI_V4MAPPED | AI_ALL;
+#endif
         result = getaddrinfo(aceHostname.constData(), 0, &hints, &res);
     }
 # endif
@@ -222,6 +229,8 @@ QHostInfo QHostInfoAgent::fromName(const QString &hostName)
         addrinfo *node = res;
         QList<QHostAddress> addresses;
         while (node) {
+            qDebug() << "getaddrinfo node: flags:" << node->ai_flags << "family:" << node->ai_family << "ai_socktype:" << node->ai_socktype << "ai_protocol:" << node->ai_protocol << "ai_addrlen:" << node->ai_addrlen;
+
             if (node->ai_family == AF_INET) {
                 QHostAddress addr;
                 addr.setAddress(ntohl(((sockaddr_in *) node->ai_addr)->sin_addr.s_addr));
